# ExtractUniqueTestcasesPy

./: .gitignore  002.bat  003.bat  004.bat  005.bat  ExcelTestCaseExtractor.py  SampleCSVFile.csv  SampleCSVFile.xlsx  csvextract.py  export.py  extractxlsx.py  getmergedcell.py  output_SampleCSVFile.xlsx  pyproject.toml
Testdata/: EME_Regression_Test Cases-Unique names.csv  EME_Regression_Test Cases.csv  SampleCSVFile.csv
output/: output.csv
